#278 - updates to the status bar.

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -781,13 +781,9 @@ online_storage.account_data=Login fehlgeschlagen. Daten korrekt?
 online_storage.general_error=Problem beim Login\: ({0}).
 
 online_label.connecting=Verbinden
-online_label.connecting.text=Sie sind online, aber nur zu wenigen Benutzern verbunden. Bitte warten Sie eine kurze Zeit um vollst\u00e4ndig verbunden zu sein. Falls dies nicht geschieht, lesen Sie die FAQ unter @ http\://www.powerfolder.com
 online_label.disabled=Deaktiviert
 online_label.disabled.text=PowerFolder arbeitet derzeit nicht.
-online_label.offline=Offline
-online_label.offline.text=Sie sind offline und mit keinem PowerFolder Benutzer verbunden
 online_label.online=Online
-online_label.online.text=Sie sind online
 
 open_local_folder.description=\u00d6ffnet das lokale Verzeichnis im Explorer
 open_local_folder.key=V
@@ -1179,9 +1175,9 @@ start_downloads.description=\u00d6ffnet die ausgew\u00e4hlte und fertig herunter
 start_downloads.key=s
 start_downloads.name=\u00d6ffnen
 
-status.download=Down\: %.2f KB/s
+status.download=%.2f KB/s
 status.port=Port\: {0}
-status.upload=Up\: %.2f KB/s
+status.upload=%.2f KB/s
 
 status_bar.status_change.connected=PowerFolder ist verbunden
 status_bar.status_change.disabled=PowerFolder ist abgeschaltet
