--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -718,13 +718,8 @@ online_storage.account_data=Impossible de se connecter. V\u00E9rifier les inform
 online_storage.general_error=Fichier d'erreurs dans\: ({0}).
 
 online_label.connecting=Connexion en cours
-online_label.connecting.text=Vous \u00EAtes en ligne, mais connect\u00E9s \u00E0 tr\u00E8s peu d'utilisateurs. Patientez quelques instants avant d'\u00EAtre compl\u00E8tement connect\u00E9s. Si cela \u00E9choue, lire la FAQ suivante (Anglais) @ http\://www.powerfolder.com
 online_label.disabled=D\u00E9activ\u00E9 (Utilisation intensive d\u00E9tect\u00E9e)
-online_label.disabled.text=PowerFolder est d\u00E9sactiv\u00E9 en raison d'une utilisation excessive.
-online_label.offline=D\u00E9connect\u00E9
-online_label.offline.text=Vous \u00EAtes d\u00E9connect\u00E9s. Connexion \u00E0 aucun utilisateur sur le r\u00E9seau PowerFolder
 online_label.online=Connect\u00E9
-online_label.online.text=Vous \u00EAtes connect\u00E9s
 
 open_local_folder.description=Ouvrir le dossier via l'explorateur de fichiers
 open_local_folder.key=E
@@ -1120,9 +1115,9 @@ start_downloads.description=Ouvrir les fichiers s\u00E9lectionn\u00E9s / t\u00E9
 start_downloads.key=O
 start_downloads.name=Ouvrir
 
-status.download=Down\: %.2f Ko/s
+status.download=%.2f Ko/s
 status.port=Port\: {0}
-status.upload=Up\: %.2f Ko/s
+status.upload=%.2f Ko/s
 
 status_bar.status_change.connected=PowerFolder est connect\u00E9
 status_bar.status_change.disabled=PowerFolder est inactif
