--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -716,13 +716,8 @@ online_storage.account_data=Impossibile effettuare il login. I dati inseriti son
 online_storage.general_error=Si \u00E8 verificato un errore effettuando il login in\: ({0}).
 
 online_label.connecting=Connessione
-online_label.connecting.text=Sei online, ma sei ancora connesso a pochi utenti. Attendi un attimo per essere completamente connesso. Se non ancora connesso, leggi le FAQ @ http\://www.powerfolder.com
 online_label.disabled=Disabilitato (Rilevato uso estensivo)
-online_label.disabled.text=PowerFolder \u00E8 attualmente disabilitato poich\u00E9 \u00E8 stato rilevato un uso estensivo.
-online_label.offline=Offline
-online_label.offline.text=Sei offline. Non sei connesso ad alcun utente del network PowerFolder
 online_label.online=Online
-online_label.online.text=Sei online
 
 open_local_folder.description=Apri la cartella nell'eslora risorse del tuo sistema operativo
 open_local_folder.key=a
@@ -1118,9 +1113,9 @@ start_downloads.description=Apri il file selezionato
 start_downloads.key=A
 start_downloads.name=Apri
 
-status.download=Down\: %.2f KB/s
+status.download=%.2f KB/s
 status.port=Porta\: {0}
-status.upload=Up\: %.2f KB/s
+status.upload=%.2f KB/s
 
 status_bar.status_change.connected=PowerFolder \u00E8 connesso
 status_bar.status_change.disabled=PowerFolder \u00E8 disabilitato
