--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -716,13 +716,8 @@ one_public_folder_panel.unable_to_connect_to_a_source=Kan bron niet verbinden
 ##online_storage.general_error=There was an error logging in\: ({0}).
 
 online_label.connecting=Verbinden
-online_label.connecting.text=U bent verbonden, maar met weinig gebruikers. Wacht even zodat uw verbinding compleet is. Als dat niet werkt lees de FAQ @ http\://www.powerfolder.com (engels)
 online_label.disabled=Uitgeschakeld (Intensief gebruikt gedetecteerd)
-online_label.disabled.text=PowerFolder is momenteel uitgeschakeld omdat intensief gebruikt was gedetecteerd
-online_label.offline=Niet verbonden
-online_label.offline.text=Niet verbonden. Niet verbonder met een bebruiker in het PowerFolder netwerk
 online_label.online=Verbonden
-online_label.online.text=U bent verbonden
 
 open_local_folder.description=Opent de Map met de verkenner van uw besturingssysteem
 open_local_folder.key=M
@@ -1118,9 +1113,9 @@ start_downloads.description=Opent het geselecteerde bestand
 start_downloads.key=O
 start_downloads.name=Open
 
-status.download=Down\: %.2f KB/s
+status.download=%.2f KB/s
 status.port=Poort\: {0}
-status.upload=Up\: %.2f KB/s
+status.upload=%.2f KB/s
 
 ##status_bar.status_change.connected=PowerFolder is connected
 ##status_bar.status_change.disabled=PowerFolder is disabled
