--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -716,13 +716,8 @@ one_public_folder_panel.unable_to_connect_to_a_source=Po\u0142\u0105czenie ze \u
 ##online_storage.general_error=There was an error logging in\: ({0}).
 
 online_label.connecting=\u0141\u0105czenie
-online_label.connecting.text=Jeste\u015b online, ale po\u0142\u0105czony z ma\u0142\u0105 liczb\u0105 u\u017cytkownik\u00f3w. Poczekaj chwil\u0119 na pe\u0142ne po\u0142\u0105czenie. Je\u015bli nic si\u0119 nie zmieni, przeczytaj FAQ @ http\://www.powerfolder.com
 online_label.disabled=Wy\u0142\u0105czone
-online_label.disabled.text=PowerFolder jest nieaktywny.
-online_label.offline=Roz\u0142\u0105czony
-online_label.offline.text=Jeste\u015b offline. Nie po\u0142\u0105czono z \u017cadnym u\u017cytkownikiem w sieci PowerFolder
 online_label.online=Po\u0142\u0105czony
-online_label.online.text=Jeste\u015b online
 
 open_local_folder.description=Otwiera folder w domy\u015blnej przegl\u0105darce plik\u00f3w Twojego systemu operacyjnego
 open_local_folder.key=F
@@ -1118,9 +1113,9 @@ start_downloads.description=Otwiera zaznaczone, pobrane pliki
 start_downloads.key=s
 start_downloads.name=Otw\u00f3rz
 
-status.download=Pobieranie\: %.2f KB/s
+status.download=%.2f KB/s
 status.port=Port\: {0}
-status.upload=Wysy\u0142anie\: %.2f KB/s
+status.upload=%.2f KB/s
 
 ##status_bar.status_change.connected=PowerFolder is connected
 ##status_bar.status_change.disabled=PowerFolder is disabled
