--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -633,13 +633,8 @@ one_public_folder_panel.this_may_take_up_to_2_minutes=Isto pode levar at\u00e9 2
 one_public_folder_panel.unable_to_connect_to_a_source=N\u00e3o \u00e9 poss\u00edvel conectar-se a uma fonte
 
 online_label.connecting=Conectando
-online_label.connecting.text=Voc\u00ea est\u00e1 online, por\u00e9m est\u00e1 conectado a poucos usu\u00e1rios. Espere um momento para ser totalmente conectado. Se isto n\u00e3o acontecer, leia as perguntas frequentes em http\://www.powerfolder.com
 online_label.disabled=Desativado
-online_label.disabled.text=PowerFolder est\u00e1 desativado no momento.
-online_label.offline=Offline
-online_label.offline.text=Voc\u00ea n\u00e3o est\u00e1 online. N\u00e3o est\u00e1 conectado a nenhum usu\u00e1rio da rede do PowerFolder
 online_label.online=Online
-online_label.online.text=Voc\u00ea est\u00e1 online
 
 open_local_folder.description=Abre pasta no explorador de arquivos do seu sistema operacional
 open_local_folder.key=P
@@ -978,9 +973,9 @@ start_downloads.description=Abre os arquivos selecionados
 start_downloads.key=A
 start_downloads.name=Abrir
 
-status.download=Baixado\: %.2f KB/s
+status.download=%.2f KB/s
 status.port=Porta\: {0}
-status.upload=Enviado\: %.2f KB/s
+status.upload=%.2f KB/s
 
 status_bar.synchronizing=Sincronizando...
 
