--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -716,13 +716,8 @@ one_public_folder_panel.unable_to_connect_to_a_source=Kan inte ansluta till k\u0
 ##online_storage.general_error=There was an error logging in\: ({0}).
 
 online_label.connecting=Ansluter
-online_label.connecting.text=Du \u00e4r online, men ansluten till v\u00e4ldigt f\u00e5 anv\u00e4ndare. V\u00e4nta en liten stund f\u00f6r att bli fullt ansluten. Om det inte g\u00e5r, l\u00e4s FAQ @ http\://www.powerfolder.com
 ##online_label.disabled=Disabled
-##online_label.disabled.text=PowerFolder is currently disabled.
-online_label.offline=Offline
-online_label.offline.text=Du \u00e4r offline. Inte ansluten till n\u00e5gon annan anv\u00e4ndare i PowerFolder-n\u00e4tverket
 online_label.online=Online
-online_label.online.text=Du \u00e4r online
 
 open_local_folder.description=\u00d6ppnar foldern i utforskaren p\u00e5 din dators operativsystem
 open_local_folder.key=F
@@ -1118,9 +1113,9 @@ start_downloads.description=\u00d6ppnar de valda, nedladdade filerna
 start_downloads.key=s
 start_downloads.name=\u00d6ppna
 
-status.download=Ner\: %.2f KB/s
+status.download=%.2f KB/s
 status.port=Port\: {0}
-status.upload=Upp\: %.2f KB/s
+status.upload=%.2f KB/s
 
 ##status_bar.status_change.connected=PowerFolder is connected
 ##status_bar.status_change.disabled=PowerFolder is disabled
