--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -715,13 +715,8 @@ online_storage.account_data=\u4e0d\u80fd\u767b\u5f55\u3002\u8d26\u53f7\u662f\u54
 online_storage.general_error=\u767b\u5f55\u65f6\u53d1\u751f\u9519\u8bef\uff1a ({0}).
 
 online_label.connecting=\u8fde\u63a5\u4e2d
-online_label.connecting.text=\u4f60\u5df2\u7ecf\u5728\u7ebf\uff0c\u4f46\u8fde\u63a5\u7684\u7528\u6237\u5f88\u5c11\u3002\u7a0d\u7b49\u4ee5\u4fbf\u5b8c\u5168\u8fde\u63a5\u3002\u5982\u679c\u4ecd\u7136\u4e0d\u884c\uff0c\u53c2\u89c1\u7591\u96be\u89e3\u8bfb http\://www.powerfolder.com
 online_label.disabled=\u7981\u7528 (\u68c0\u6d4b\u5230\u8fc7\u5ea6\u4f7f\u7528)
-online_label.disabled.text=\u7531\u4e8e\u68c0\u6d4b\u5230\u8fc7\u5ea6\u4f7f\u7528\uff0cPowerFolder\u5df2\u88ab\u7981\u7528\u3002
-online_label.offline=\u79bb\u7ebf
-online_label.offline.text=\u4f60\u76ee\u524d\u79bb\u7ebf\u3002\u6ca1\u6709\u548cPowerFolder\u7684\u7528\u6237\u8fde\u63a5
 online_label.online=\u5728\u7ebf
-online_label.online.text=\u4f60\u76ee\u524d\u5728\u7ebf
 
 open_local_folder.description=\u5728\u8d44\u6e90\u5904\u7406\u5668\u4e2d\u6253\u5f00
 open_local_folder.key=F
@@ -1117,9 +1112,9 @@ start_downloads.description=\u6253\u5f00\u9009\u5b9a\u7684\u4e0b\u8f7d\u6587\u4e
 start_downloads.key=s
 start_downloads.name=\u6253\u5f00
 
-status.download=\u4e0b\u8f7d\: %.2f KB/\u79d2
+status.download=%.2f KB/\u79d2
 status.port=\u7aef\u53e3\: {0}
-status.upload=\u4e0a\u4f20\: %.2f KB/\u79d2
+status.upload=%.2f KB/\u79d2
 
 status_bar.status_change.connected=PowerFolder\u5df2\u7ecf\u8fde\u63a5
 status_bar.status_change.disabled=PowerFolder\u5df2\u7ecf\u7981\u7528
