--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -716,13 +716,8 @@ one_public_folder_panel.unable_to_connect_to_a_source=\u063a\u064a\u0631 \u0642\
 ##online_storage.general_error=There was an error logging in\: ({0}).
 
 online_label.connecting=\u0645\u062a\u0635\u0644
-online_label.connecting.text=\u0623\u0646\u062a \u0639\u0644\u0649 \u0627\u0644\u062e\u0637 , \u0648\u0644\u0643\u0646 \u0645\u062a\u0635\u0644 \u0645\u0639 \u0639\u062f\u062f \u0642\u0644\u064a\u0644 \u0645\u0646 \u0627\u0644\u0623\u0639\u0636\u0627\u0621. \u0623\u0646\u062a\u0638\u0631 \u0648\u0642\u062a\u0627 \u0642\u0644\u064a\u0644\u0627 \u0644\u062a\u062a\u0635\u0644 \u0628\u0634\u0643\u0644 \u0643\u0627\u0645\u0644 . \u0625\u0630\u0627 \u0628\u0642\u064a\u062a \u063a\u064a\u0631 \u0645\u062a\u0635\u0644 , \u0623\u0642\u0631\u0627 \u0627\u0644\u062d\u0642\u0627\u0626\u0642  @ http\://www.powerfolder.com
 online_label.disabled=\u0645\u0639\u0637\u0644
-online_label.disabled.text=PowerFolder \u0645\u0639\u0637\u0644 \u062d\u0627\u0644\u064a\u0627 .
-online_label.offline=\u062e\u0627\u0631\u062c \u0627\u0644\u062e\u0637
-online_label.offline.text=\u0623\u0646\u062a \u062e\u0627\u0631\u062c \u0627\u0644\u062e\u0637 . \u063a\u064a\u0631 \u0645\u062a\u0635\u0644 \u0628\u0623\u064a \u0639\u0636\u0648 \u0639\u0644\u0649 \u0634\u0628\u0643\u0629 PowerFolder
 online_label.online=\u0639\u0644\u0649 \u0627\u0644\u062e\u0637
-online_label.online.text=\u0623\u0646\u062a \u0639\u0644\u0649 \u0627\u0644\u062e\u0637
 
 open_local_folder.description=\u0623\u0641\u062a\u062d \u0645\u062c\u0644\u062f \u0639\u0646 \u0637\u0631\u064a\u0642 \u0645\u0633\u062a\u0639\u0631\u0636 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0625\u0641\u062a\u0631\u0627\u0636\u064a \u0641\u064a \u0646\u0638\u0627\u0645\u0643
 open_local_folder.key=\u0628
@@ -1118,9 +1113,9 @@ start_downloads.description=\u0627\u0641\u062a\u062d \u0627\u0644\u0645\u0644\u0
 start_downloads.key=\u0633
 start_downloads.name=\u0641\u062a\u062d
 
-status.download=\u062a\u062d\u0645\u064a\u0644\: %.2f KB/s
+status.download=%.2f KB/s
 status.port=\u0645\u0646\u0641\u0630\: {0}
-status.upload=\u0631\u0641\u0639\: %.2f KB/s
+status.upload=%.2f KB/s
 
 ##status_bar.status_change.connected=PowerFolder is connected
 ##status_bar.status_change.disabled=PowerFolder is disabled
