--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -717,13 +717,8 @@ one_public_folder_panel.this_may_take_up_to_2_minutes=This may take up to 2 minu
 one_public_folder_panel.unable_to_connect_to_a_source=Unable to connect to a source
 
 online_label.connecting=Connecting
-online_label.connecting.text=You are online, but connected to very few users. Wait a short time to get fully connected. If still not, read the FAQ @ http\://www.powerfolder.com
 online_label.disabled=Disabled
-online_label.disabled.text=PowerFolder is currently disabled.
-online_label.offline=Offline
-online_label.offline.text=You are offline. Not connected to any user on the PowerFolder network
 online_label.online=Online
-online_label.online.text=You are online
 
 online_storage.account_data=Unable to login. Are account details correct?
 online_storage.general_error=There was an error logging in: ({0}).
@@ -1070,9 +1065,9 @@ start_downloads.description=Opens the selected downloaded files
 start_downloads.key=O
 start_downloads.name=Open
 
-status.download=Down\: %.2f KB/s
+status.download=%.2f KB/s
 status.port=Port\: {0}
-status.upload=Up\: %.2f KB/s
+status.upload=%.2f KB/s
 
 status_bar.synchronizing=Synchronising...
 status_bar.status_change.title=Connection Status
