--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -715,13 +715,8 @@ online_storage.account_data=Accesso incorrecto. Favor de verifcar la informacion
 online_storage.general_error=Error al dar accesso en \: ({0}).
 
 online_label.connecting=Conectando
-online_label.connecting.text=Est\u00E1 en l\u00EDnea, pero conectado a pocos usuarios. Espere un poco para estar completamente conectado. Si no se llega a conectar, lea el FAQ en http\://www.powerfolder.com
 online_label.disabled=Desabilitado
-online_label.disabled.text=PowerFolder esta desabilitado.
-online_label.offline=Fuera de l\u00EDnea
-online_label.offline.text=Est\u00E1 fuera de l\u00EDnea. No est\u00E1 conectado a otro usuario de la red PowerFolder
 online_label.online=En l\u00EDnea
-online_label.online.text=Est\u00E1 en l\u00EDnea
 
 open_local_folder.description=Abre una carpeta con el explorador de archivos en su sistema operativo
 open_local_folder.key=F
@@ -1117,9 +1112,9 @@ start_downloads.description=Abre los archivos descargados seleccionados
 start_downloads.key=s
 start_downloads.name=Abrir
 
-status.download=Bajada\: %.2f KB/s
+status.download=%.2f KB/s
 status.port=Puerto\: {0}
-status.upload=Subida\: %.2f KB/s
+status.upload=%.2f KB/s
 
 status_bar.status_change.connected=PowerFolder conectado
 status_bar.status_change.disabled=El PowerFolder desactivado
