--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -713,13 +713,8 @@ online_storage.account_data=\u30ED\u30B0\u30A4\u30F3\u3067\u304D\u307E\u305B\u30
 online_storage.general_error=\u30ED\u30B0\u30A4\u30F3\u306B\u30A8\u30E9\u30FC\u767A\u751F\: ({0}).
 
 online_label.connecting=\u63A5\u7D9A\u8A66\u884C\u7D99\u7D9A\u4E2D
-online_label.connecting.text=\u73FE\u5728\u30AA\u30F3\u30E9\u30A4\u30F3\u3067\u3059\u304C\u63A5\u7D9A\u30E6\u30FC\u30B6\u30FC\u304C\u5C11\u306A\u3044\u72B6\u614B\u3067\u3059\u3002\u5B8C\u5168\u306B\u63A5\u7D9A\u3059\u308B\u306B\u306F\u3082\u3046\u5C11\u3057\u304A\u5F85\u3061\u304F\u3060\u3055\u3044\u3002\u72B6\u614B\u304C\u5168\u304F\u5909\u5316\u3057\u306A\u3044\u5834\u5408\u3001\u3053\u3061\u3089\u306E FAQ \u3092\u53C2\u7167\u3057\u3066\u304F\u3060\u3055\u3044\u3002http\://www.powerfolder.com
 online_label.disabled=\u7121\u52B9\u72B6\u614B\uFF08\u904E\u5270\u4F7F\u7528\u3092\u691C\u51FA\uFF09
-online_label.disabled.text=\u904E\u5270\u4F7F\u7528\u304C\u691C\u51FA\u3055\u308C\u305F\u305F\u3081\u3001\u73FE\u5728 PowerFolder \u306F\u7121\u52B9\u72B6\u614B\u3067\u3059\u3002
-online_label.offline=\u30AA\u30D5\u30E9\u30A4\u30F3
-online_label.offline.text=\u73FE\u5728\u30AA\u30D5\u30E9\u30A4\u30F3\u3067\u3059\u3002PowerFolder \u30CD\u30C3\u30C8\u30EF\u30FC\u30AF\u4E0A\u306E\u30E6\u30FC\u30B6\u30FC\u306B\u63A5\u7D9A\u3057\u3066\u3044\u307E\u305B\u3093\u3002
 online_label.online=\u30AA\u30F3\u30E9\u30A4\u30F3
-online_label.online.text=\u73FE\u5728\u30AA\u30F3\u30E9\u30A4\u30F3\u3067\u3059\u3002
 
 open_local_folder.description=\u30B7\u30B9\u30C6\u30E0\u65E2\u5B9A\u306E\u30D5\u30A1\u30A4\u30E9\u3067\u30ED\u30FC\u30AB\u30EB\u306E\u5B9F\u30D5\u30A9\u30EB\u30C0\u3092\u958B\u304F
 open_local_folder.key=F
@@ -1115,9 +1110,9 @@ start_downloads.description=\u9078\u629E\u3057\u305F\u30C0\u30A6\u30F3\u30ED\u30
 start_downloads.key=S
 start_downloads.name=\u958B\u304F(S)
 
-status.download=\u53D7\u4FE1\: %.2f KB/s
+status.download=%.2f KB/s
 status.port=\u30DD\u30FC\u30C8\: {0}
-status.upload=\u9001\u4FE1\: %.2f KB/s
+status.upload=%.2f KB/s
 
 status_bar.status_change.connected=PowerFolder \u306F\u63A5\u7D9A\u72B6\u614B\u3067\u3059
 status_bar.status_change.disabled=PowerFolder \u306F\u7121\u52B9\u72B6\u614B\u3067\u3059
