#278 - nice wizard button icons

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1309,7 +1309,7 @@ wizard.choose_disk_location.calculating_directory_size=Berechne Größe des Verzei
 wizard.choose_disk_location.directory_size=Verzeichnis Größe {0}
 wizard.choose_disk_location.select=Verzeichnisauswahl
 wizard.choose_disk_location.title=Festplatten Speicherort
-wizard.control.back=< Zur\u00fcck
+wizard.control.back=Zur\u00fcck
 wizard.control.back.description=Zum vorherigen Schritt
 wizard.control.cancel=Abbrechen
 wizard.control.cancel.description=Diesen Wizard abbrechen
@@ -1317,7 +1317,7 @@ wizard.control.finish=Fertig
 wizard.control.finish.description=Diesen Wizard abschließen
 wizard.control.help=Hilfe
 wizard.control.help.description=Online Hilfe öffnen (Alt-8)
-wizard.control.next=Weiter >
+wizard.control.next=Weiter
 wizard.control.next.description=Zum nächsten Schritt
 wizard.create_folder.failed=Kann PowerFolder nicht erstellen.
 wizard.create_folder.title=Erstelle PowerFolder
