--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -1246,7 +1246,7 @@ wizard.choose_disk_location.calculating_directory_size=Calculando el tama\u00F1o
 wizard.choose_disk_location.directory_size=Tama\u00F1oo de directiorio {0}
 wizard.choose_disk_location.select=Seleccione el directorio
 wizard.choose_disk_location.title=Ubicaci\u00F3n en el disco
-wizard.control.back=< Atr\u00E1s
+wizard.control.back=Atr\u00E1s
 wizard.control.back.description=Ir al paso previo del Asistente
 wizard.control.cancel=Cancelar
 wizard.control.cancel.description=Cancelar este Asistente
@@ -1254,7 +1254,7 @@ wizard.control.finish=Finalizar
 wizard.control.finish.description=Finalizar la tarea de este Asistente
 wizard.control.help=Ayuda
 wizard.control.help.description=Mostrar ayuda en linea (Alt-8)
-wizard.control.next=Siguiente >
+wizard.control.next=Siguiente
 wizard.control.next.description=Ir al siguiente paso del Asistente
 wizard.create_folder.failed=Fracas\u00F3 la creaci\u00F3n del PowerFolder.
 wizard.create_folder.title=Creando un PowerFolder
