--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1249,7 +1249,7 @@ wizard.choose_disk_location.calculating_directory_size=Calcule de la taille du d
 wizard.choose_disk_location.directory_size=Dossier de taille {0}
 wizard.choose_disk_location.select=S\u00E9lectionner le r\u00E9pertoire
 wizard.choose_disk_location.title=Emplacement sur le disque
-wizard.control.back=< Pr\u00E9c\u00E9dent
+wizard.control.back=Pr\u00E9c\u00E9dent
 wizard.control.back.description=Revenir \u00E0 l'\u00E9tape pr\u00E9c\u00E9dente
 wizard.control.cancel=Annuler
 wizard.control.cancel.description=Annuler cet assistant
@@ -1257,7 +1257,7 @@ wizard.control.finish=Terminer
 wizard.control.finish.description=Terminer l'assistant en cours
 wizard.control.help=Aide
 wizard.control.help.description=Afficher l'aide en ligne (Alt-8)
-wizard.control.next=Suivant >
+wizard.control.next=Suivant
 wizard.control.next.description=Avancer \u00E0 l'\u00E9\u00E9tape suivante
 wizard.create_folder.failed=Echec de cr\u00E9ation du dossier PowerFolder.
 wizard.create_folder.title=Cr\u00E9ation du dossier PowerFolder
