--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -1247,7 +1247,7 @@ wizard.choose_disk_location.calculating_directory_size=Sto calcolando la dimensi
 wizard.choose_disk_location.directory_size=La dimensione della directory \u00E8 {0}
 wizard.choose_disk_location.select=Scegli la directory
 wizard.choose_disk_location.title=Percorso su disco
-wizard.control.back=< Precedente
+wizard.control.back=Precedente
 wizard.control.back.description=Torna al passo precedente del wizard
 wizard.control.cancel=Cancella
 wizard.control.cancel.description=Cancella questo wizard
@@ -1255,7 +1255,7 @@ wizard.control.finish=Finito
 wizard.control.finish.description=Completa l'operaione del wizard
 wizard.control.help=Aiuto
 wizard.control.help.description=Mostra aiuto in linea (Alt-8)
-wizard.control.next=Prossimo >
+wizard.control.next=Prossimo
 wizard.control.next.description=Vai al passo successivo del wizard
 wizard.create_folder.failed=Errore nella creazione del PowerFolder.
 wizard.create_folder.title=Sto creando il PowerFolder
