--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -1247,7 +1247,7 @@ wizard.basic_setup.title=Basis Setup
 ##wizard.choose_disk_location.directory_size=Directory size {0}
 wizard.choose_disk_location.select=Selecteer map
 wizard.choose_disk_location.title=Disk lokatie
-wizard.control.back=< Vorige
+wizard.control.back=Vorige
 ##wizard.control.back.description=Go to previous wizard step
 wizard.control.cancel=Annuleren
 ##wizard.control.cancel.description=Cancel this wizard
@@ -1255,7 +1255,7 @@ wizard.control.finish=Klaar
 ##wizard.control.finish.description=Finish this wizard task
 wizard.control.help=Help
 ##wizard.control.help.description=Show online help (Alt-8)
-wizard.control.next=Volgende >
+wizard.control.next=Volgende
 ##wizard.control.next.description=Go to next wizard step
 ##wizard.create_folder.failed=Failed to create PowerFolder.
 ##wizard.create_folder.title=Creating PowerFolder
