--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -1247,7 +1247,7 @@ wizard.basic_setup.upload.title=Nieograniczona pr\u0119dko\u015b\u0107 po\u0142\
 ##wizard.choose_disk_location.directory_size=Directory size {0}
 wizard.choose_disk_location.select=Wybierz folder
 wizard.choose_disk_location.title=Miejsce na dysku
-wizard.control.back=< Wstecz
+wizard.control.back=Wstecz
 wizard.control.back.description=Przejd\u017a do poprzedniego kroku kreatora
 wizard.control.cancel=Anuluj
 wizard.control.cancel.description=Anuluj kreatora
@@ -1255,7 +1255,7 @@ wizard.control.finish=Zako\u0144cz
 wizard.control.finish.description=Zako\u0144cz zadanie kreatora
 wizard.control.help=Pomoc
 wizard.control.help.description=Poka\u017c pomoc online (Alt-8)
-wizard.control.next=Dalej >
+wizard.control.next=Dalej
 wizard.control.next.description=Przejd\u017a do nast\u0119pnego kroku kreatora
 ##wizard.create_folder.failed=Failed to create PowerFolder.
 ##wizard.create_folder.title=Creating PowerFolder
