--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -1082,7 +1082,7 @@ wizard.basic_setup.upload.title=Velocidade ilimitada de conex\u00e3o
 wizard.choose_disk_location.select=Selecione diret\u00f3rio
 wizard.choose_disk_location.title=Localiza\u00e7\u00e3o do disco
 wizard.choose_location.select=Por favor selecione o diret\u00f3rio
-wizard.control.back=< Voltar
+wizard.control.back=Voltar
 wizard.control.back.description=Voltar para o passo anterior
 wizard.control.cancel=Cancelar
 wizard.control.cancel.description=Cancelar o assistente
@@ -1090,7 +1090,7 @@ wizard.control.finish=Terminar
 wizard.control.finish.description=Terminar o assistente de configura\u00e7\u00e3o
 wizard.control.help=Ajuda
 wizard.control.help.description=Mostrar ajuda online (Alt-8)
-wizard.control.next=Avan\u00e7ar >
+wizard.control.next=Avan\u00e7ar
 wizard.control.next.description=Ir para pr\u00f3ximo passo
 wizard.create_folder.title=Criando pasta PowerFolder
 wizard.create_folder.failed=N\u00e3o foi poss\u00edvel criar pasta PowerFolder
