--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -1247,7 +1247,7 @@ wizard.basic_setup.title=Grundl\u00e4ggande inst\u00e4llningar
 ##wizard.choose_disk_location.directory_size=Directory size {0}
 wizard.choose_disk_location.select=V\u00e4lj mapp
 wizard.choose_disk_location.title=Plats p\u00e5 disk
-wizard.control.back=< Tillbaka
+wizard.control.back=Tillbaka
 ##wizard.control.back.description=Go to previous wizard step
 wizard.control.cancel=Avbryt
 ##wizard.control.cancel.description=Cancel this wizard
@@ -1255,7 +1255,7 @@ wizard.control.finish=Slutf\u00f6r
 ##wizard.control.finish.description=Finish this wizard task
 wizard.control.help=Hj\u00e4lp
 ##wizard.control.help.description=Show online help (Alt-8)
-wizard.control.next=N\u00e4sta >
+wizard.control.next=N\u00e4sta
 ##wizard.control.next.description=Go to next wizard step
 ##wizard.create_folder.failed=Failed to create PowerFolder.
 ##wizard.create_folder.title=Creating PowerFolder
