--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1246,7 +1246,7 @@ wizard.choose_disk_location.calculating_directory_size=\u6b63\u5728\u8ba1\u7b97\
 wizard.choose_disk_location.directory_size=\u76ee\u5f55\u5927\u5c0f {0}
 wizard.choose_disk_location.select=\u9009\u62e9\u76ee\u5f55
 wizard.choose_disk_location.title=\u78c1\u76d8\u4f4d\u7f6e
-wizard.control.back=< \u8fd4\u56de
+wizard.control.back=\u8fd4\u56de
 wizard.control.back.description=\u5230\u5411\u5bfc\u7684\u4e0a\u4e00\u6b65
 wizard.control.cancel=\u53d6\u6d88
 wizard.control.cancel.description=\u53d6\u6d88\u5411\u5bfc
@@ -1254,7 +1254,7 @@ wizard.control.finish=\u5b8c\u6210
 wizard.control.finish.description=\u5b8c\u6210\u5411\u5bfc\u4efb\u52a1
 wizard.control.help=\u5e2e\u52a9
 wizard.control.help.description=\u663e\u793a\u5728\u7ebf\u5e2e\u52a9 (Alt-8)
-wizard.control.next=\u4e0b\u4e00\u6b65 >
+wizard.control.next=\u4e0b\u4e00\u6b65
 wizard.control.next.description=\u5230\u5411\u5bfc\u7684\u4e0b\u4e00\u6b65
 wizard.create_folder.failed=\u521b\u5efaPowerFolder\u5931\u8d25\u3002
 wizard.create_folder.title=\u6b63\u5728\u521b\u5efaPowerFolder
