--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -1247,7 +1247,7 @@ wizard.basic_setup.title=\u0627\u0644\u062a\u0643\u0648\u064a\u0646 \u0627\u0644
 ##wizard.choose_disk_location.directory_size=Directory size {0}
 wizard.choose_disk_location.select=\u0623\u062e\u062a\u0631 \u0645\u0633\u0627\u0631\u0627\u064b
 wizard.choose_disk_location.title=\u0645\u0648\u0642\u0639 \u0627\u0644\u0642\u0631\u0635
-wizard.control.back=< \u0639\u0648\u062f\u0629
+wizard.control.back=\u0639\u0648\u062f\u0629
 ##wizard.control.back.description=Go to previous wizard step
 wizard.control.cancel=\u0625\u0644\u063a\u0627\u0621
 ##wizard.control.cancel.description=Cancel this wizard
@@ -1255,7 +1255,7 @@ wizard.control.finish=\u0625\u0646\u0647\u0627\u0621
 ##wizard.control.finish.description=Finish this wizard task
 wizard.control.help=\u0627\u0644\u0645\u0633\u0627\u0639\u062f\u0629
 ##wizard.control.help.description=Show online help (Alt-8)
-wizard.control.next=\u0627\u0644\u062a\u0627\u0644\u064a >
+wizard.control.next=\u0627\u0644\u062a\u0627\u0644\u064a
 ##wizard.control.next.description=Go to next wizard step
 ##wizard.create_folder.failed=Failed to create PowerFolder.
 ##wizard.create_folder.title=Creating PowerFolder
