--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1198,7 +1198,7 @@ wizard.choose_disk_location.select=Select directory
 wizard.choose_disk_location.calculating_directory_size=Calculating size of directory...
 wizard.choose_disk_location.directory_size=Directory size {0}
 wizard.choose_disk_location.title=Disk location
-wizard.control.back=< Back
+wizard.control.back=Back
 wizard.control.back.description=Go to previous wizard step
 wizard.control.cancel=Cancel
 wizard.control.cancel.description=Cancel this wizard
@@ -1206,7 +1206,7 @@ wizard.control.finish=Finish
 wizard.control.finish.description=Finish this wizard task
 wizard.control.help=Help
 wizard.control.help.description=Show online help (Alt-8)
-wizard.control.next=Next >
+wizard.control.next=Next
 wizard.control.next.description=Go to next wizard step
 wizard.create_folder.failed=Failed to create PowerFolder.
 wizard.create_folder.title=Creating PowerFolder
