--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1244,7 +1244,7 @@ wizard.choose_disk_location.calculating_directory_size=\u30C7\u30A3\u30EC\u30AF\
 wizard.choose_disk_location.directory_size=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u30FB\u30B5\u30A4\u30BA {0}
 wizard.choose_disk_location.select=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u306E\u9078\u629E
 wizard.choose_disk_location.title=\u30C7\u30A3\u30B9\u30AF\u5185\u306E\u5834\u6240
-wizard.control.back=< \u623B\u308B
+wizard.control.back=\u623B\u308B
 wizard.control.back.description=\u524D\u306E\u6BB5\u968E\u306B\u623B\u308B
 wizard.control.cancel=\u53D6\u6D88\u3057
 wizard.control.cancel.description=\u3053\u306E\u30A6\u30A3\u30B6\u30FC\u30C9\u3092\u30AD\u30E3\u30F3\u30BB\u30EB
@@ -1252,7 +1252,7 @@ wizard.control.finish=\u5B8C\u4E86
 wizard.control.finish.description=\u3053\u306E\u30A6\u30A3\u30B6\u30FC\u30C9\u306E\u30BF\u30B9\u30AF\u3092\u5B8C\u4E86\u3055\u305B\u308B
 wizard.control.help=\u30D8\u30EB\u30D7
 wizard.control.help.description=\u30AA\u30F3\u30E9\u30A4\u30F3\u30D8\u30EB\u30D7\u3092\u8868\u793A (Alt-8)
-wizard.control.next=\u6B21\u3078 >
+wizard.control.next=\u6B21\u3078
 wizard.control.next.description=\u6B21\u306E\u6BB5\u968E\u306B\u9032\u3080
 wizard.create_folder.failed=\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u306E\u4F5C\u6210\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002
 wizard.create_folder.title=\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u306E\u4F5C\u6210\u4E2D
