--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -1247,7 +1247,7 @@ wizard.choose_disk_location.calculating_directory_size=\u0412\u044B\u0447\u0438\
 wizard.choose_disk_location.directory_size=\u0420\u0430\u0437\u043C\u0435\u0440 \u043F\u0430\u043F\u043A\u0438 {0}
 wizard.choose_disk_location.select=\u0412\u044B\u0431\u043E\u0440 \u043F\u0430\u043F\u043A\u0438 \u0434\u043B\u044F \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u044F \u0444\u0430\u0439\u043B\u043E\u0432
 wizard.choose_disk_location.title=\u041C\u0435\u0441\u0442\u043E \u043D\u0430 \u0436\u0451\u0441\u0442\u043A\u043E\u043C \u0434\u0438\u0441\u043A\u0435
-wizard.control.back=< \u041D\u0430\u0437\u0430\u0434
+wizard.control.back=\u041D\u0430\u0437\u0430\u0434
 wizard.control.back.description=\u041F\u0435\u0440\u0435\u0439\u0442\u0438 \u043A \u043F\u0440\u0435\u0434\u044B\u0434\u0443\u0449\u0435\u043C\u0443 \u0448\u0430\u0433\u0443
 wizard.control.cancel=\u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
 wizard.control.cancel.description=\u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C \u043C\u0430\u0441\u0442\u0435\u0440
@@ -1255,7 +1255,7 @@ wizard.control.finish=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u04
 wizard.control.finish.description=\u0417\u0430\u0432\u0435\u0440\u0448\u0438\u0442\u044C \u044D\u0442\u043E \u0437\u0430\u0434\u0430\u043D\u0438\u0435 \u043C\u0430\u0441\u0442\u0435\u0440\u0430
 wizard.control.help=\u041F\u043E\u043C\u043E\u0449\u044C
 wizard.control.help.description=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u043E\u043D\u043B\u0430\u0439\u043D-\u043F\u043E\u043C\u043E\u0449\u044C (Alt-8)
-wizard.control.next=\u0414\u0430\u043B\u044C\u0448\u0435 >
+wizard.control.next=\u0414\u0430\u043B\u044C\u0448\u0435
 wizard.control.next.description=\u041F\u0435\u0440\u0435\u0439\u0442\u0438 \u043A \u0441\u043B\u0435\u0434\u0443\u044E\u0449\u0435\u043C\u0443 \u0448\u0430\u0433\u0443
 wizard.create_folder.failed=\u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0441\u043E\u0437\u0434\u0430\u0442\u044C \u043F\u0430\u043F\u043A\u0443 PowerFolder.
 wizard.create_folder.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u043F\u0430\u043F\u043A\u0438 PowerFolder
