Minor wording change

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -828,7 +828,7 @@ preferences.dialog.color_theme=PowerFolder Thema
 preferences.dialog.create_desktop_shortcuts=Link auf dem Desktop anlegen
 preferences.dialog.debugReports=Debug logs einschalten
 preferences.dialog.delete_empty_dirs=Leere Verzeichnisse entfernen
-preferences.dialog.delta_sync=Delta Sync verwenden
+preferences.dialog.delta_sync=Delta Sync im Internet verwenden
 preferences.dialog.delta_sync.tooltip=Synchronisiert nur Datei\u00e4nderungen
 preferences.dialog.dialogs.ask_to_add_friend_message=Nachricht schreiben, wenn Benutzer auf die Freundesliste gesetzt wird.
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Meldung wenn ein Benutzer einen Folder betritt, der nicht auf der Freundesliste steht.
