--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -19,6 +19,7 @@
 # http://www.powerfolder.com
 #
 
+wizard.login_online_storage.remind_password=Passwort merken
 general.search=Suchen
 general.close=Schliessen
 general.close.key=S
